improved preview ui - reveals icons on click on a hamburger menu - better handling overlapping ui menus in narrow spaces. fixes #138

--- a/assets/czr/sek/css/sek-preview.css
+++ b/assets/czr/sek/css/sek-preview.css
@@ -72,11 +72,15 @@
 }
 .sek-dyn-ui-inner {
     position: absolute;
-    top: -18px;
-    opacity: 0.8;
+    /*top: -18px;*/
+    /*opacity: 0.8;*/
     -webkit-transition: opacity .25s ease;
     -o-transition: opacity .25s ease;
     transition: opacity .25s ease;
+}
+.sek-dyn-ui-inner.sek-is-expanded {
+  display: block!important;
+  z-index: 2000!important;
 }
 .sek-dyn-left-icons {
     left: 0;
@@ -96,7 +100,7 @@
   background: #00A0D2;
   float: left;
   min-height: 18px;
-  margin: -1px -1px 0;
+  /*margin: -1px -1px 0;*/
   padding: 0 4px;
   text-shadow: none;
   font-size: 1em;
@@ -153,12 +157,15 @@
     position: absolute;
     z-index: 2;
     bottom: 0;
-    padding: 0 1em;
+    padding: 2px 0.5em;
     font-size: 0.6em;
     right: 0;
     cursor: pointer;
+    opacity: 0.75;
 }
-
+.sek-dyn-ui-location-type:hover {
+  opacity: 1;
+}
 
 
 
@@ -191,9 +198,16 @@
 /* prevent style propagation to nested levels with > */
 .sek-section > .sek-dyn-ui-wrapper .sek-dyn-ui-icons, .sek-section > .sek-dyn-ui-wrapper .sek-dyn-ui-location-type {
   background: #000;
+  opacity: 0.75;
+}
+.sek-section > .sek-dyn-ui-wrapper .sek-dyn-ui-icons:hover {
+  opacity: 1;
 }
 .sek-section > .sek-dyn-ui-wrapper .sek-dyn-ui-location-type {
   z-index: 1000;
+  position: relative;
+  float: left;
+  padding: 4px 0.5em;
 }
 .sek-section[data-sek-is-nested="true"] > .sek-dyn-ui-wrapper .sek-dyn-ui-location-type {
   z-index: 1002;
@@ -202,7 +216,7 @@
     border: 2px dotted #000;
 }
 .sek-section > .sek-section-dyn-ui .sek-dyn-ui-inner {
-  top:-22px;
+      top: -1px;
   z-index: 1000;
 }
 .sek-section.sek-highlight-active-ui {
@@ -215,14 +229,16 @@
 /* COLUMN UI*/
 /* prevent style propagation to nested levels with > */
 .sek-column > .sek-column-dyn-ui .sek-dyn-ui-inner {
-  top:0px;
-  z-index: 1001;
+  bottom: 0%;
+  z-index: 1002;
+  display: none;
 }
 .sek-column > .sek-dyn-ui-wrapper .sek-dyn-ui-icons, .sek-column > .sek-dyn-ui-wrapper .sek-dyn-ui-location-type {
   background: #00b846;
 }
 .sek-column > .sek-dyn-ui-wrapper .sek-dyn-ui-location-type {
   z-index: 1001;
+  bottom: 3px;
 }
 .sek-column-dyn-ui {
     border: 2px dotted #00b846;
@@ -242,31 +258,45 @@
     -webkit-box-shadow: 0 0 2px rgba(0, 184, 70, 0.8);
     box-shadow: 0 0 2px rgba(0, 184, 70, 0.8);
 }
-
-
+.sek-column .sek-dyn-ui-hamb-menu-wrapper, .sek-column .sek-dyn-ui-level-type {
+  float: right;
+}
+.sek-column .sek-dyn-ui-level-type {
+  padding-right: 0.5em;
+}
+.sek-column .sek-minimize-ui {
+  float: left;
+  width: 16px;
+}
+.sek-column .sek-dyn-ui-location-inner {
+  float: left;
+}
 
 /* MODULE UI*/
 /* prevent style propagation to nested levels with > */
-.sek-module {
+/*.sek-module {
   min-height: 50px
-}
+}*/
 .sek-module:hover{
   cursor:pointer;
 }
 .sek-module > .sek-module-dyn-ui .sek-dyn-ui-inner {
-  top:0px;
-  z-index: 1005;
+  bottom: 0;
+  z-index: 1006;
+  display: none;
 }
 .sek-module > .sek-dyn-ui-wrapper .sek-dyn-ui-icons, .sek-module > .sek-dyn-ui-wrapper .sek-dyn-ui-location-type{
   background: #0085ba;
 }
 .sek-module > .sek-dyn-ui-wrapper .sek-dyn-ui-location-type {
   left: 0;
+  top: auto;
+  bottom: 0;
   right: auto;
   z-index: 1005;
 }
 .sek-module-dyn-ui {
-    border: 1px dotted #0085ba;
+    border: 2px dotted #0085ba;
     font-size: 1rem;
 }
 
@@ -288,26 +318,33 @@
     -webkit-box-shadow: 0 0 2px rgba(0, 133, 186, 0.8);
     box-shadow: 0 0 2px rgba(0, 133, 186, 0.8);
 }
+.sek-module .sek-dyn-ui-hamb-menu-wrapper, .sek-module .sek-dyn-ui-level-type {
+  float: left;
+}
+.sek-module .sek-dyn-ui-level-type {
+  padding-left: 0.5em;
+}
+
 
 
 
 
 /* HAMBURGER MENU */
-.ham__toggler-span-wrapper {
-    height: 12px;
+.sek-ham__toggler-span-wrapper {
+    height: 10px;
     position: relative;
-    width: 20px;
+    width: 16px;
     display: block;
 }
-.ham__toggler-span-wrapper .line.line-1 {top: 0;}
-.ham__toggler-span-wrapper .line.line-2 {top: 50%;}
-.ham__toggler-span-wrapper .line.line-3 {top: 100%;}
+.sek-ham__toggler-span-wrapper .line.line-1 {top: 10%;}
+.sek-ham__toggler-span-wrapper .line.line-2 {top: 60%;}
+.sek-ham__toggler-span-wrapper .line.line-3 {top: 110%;}
 
-.ham__toggler-span-wrapper .line {
-    background: #313131;
+.sek-ham__toggler-span-wrapper .line {
+    background: #ffffff;
     display: block;
-    width: 20px;
-    height: 1.4px;
+    width: 16px;
+    height: 2px;
     position: absolute;
     -webkit-border-radius: 5px;
     -webkit-background-clip: padding-box;
@@ -315,19 +352,30 @@
     -moz-background-clip: padding;
     border-radius: 5px;
     background-clip: padding-box;
-    transition: all ease 0.35s;
+    transition: all ease 0.2s;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
 }
-.sek-dyn-ui-hamb-menu-wrapper:hover .line {
-    background-color: rgba(49, 49, 49, 0.7);
-    -webkit-transform: translate(-3px, 0);
-    transform: translate(-3px, 0);
-    width: 26px;
+.sek-dyn-ui-location-type:hover .line {
+    /*background-color: rgba(49, 49, 49, 0.7);*/
+    -webkit-transform: translate(-2px, 0);
+    transform: translate(-2px, 0);
+    width: 20px;
 }
-
-
-
+/*.sek-dyn-ui-hamb-menu-wrapper:not(.sek-collapsed) .line-1 {
+    -webkit-transform: translate(-3px, 6px) rotate(45deg);
+    transform: translate(-3px, 6px) rotate(45deg);
+    width: 28px;
+}
+.sek-dyn-ui-hamb-menu-wrapper:not(.sek-collapsed) .line-2 {
+    opacity: 0;
+}
+.sek-dyn-ui-hamb-menu-wrapper:not(.sek-collapsed) .line-3 {
+    -webkit-transform: translate(-3px, -6px) rotate(-45deg);
+    transform: translate(-3px, -6px) rotate(-45deg);
+    width: 28px;
+}
+*/
 
 
 
